--- a/src/assets/styles/delete-task-modal.scss
+++ b/src/assets/styles/delete-task-modal.scss
@@ -67,6 +67,7 @@
       border: none;
       cursor: pointer;
       border-radius: 24px;
+      flex: initial;
     }
 
     .confirm-button {
