--- a/src/assets/styles/edit-task-modal.scss
+++ b/src/assets/styles/edit-task-modal.scss
@@ -21,6 +21,8 @@
   border-radius: 24px;
   max-width: 36rem;
   color: $white;
+  display: flex;
+  flex-direction: column;
 }
 
 .modal.edit-task-modal .close-button {
@@ -59,7 +61,7 @@
 .modal.edit-task-modal select,
 .modal.edit-task-modal textarea {
   width: 100%;
-  padding: 8px;
+  padding: 0.5rem;
   box-sizing: border-box;
   border-radius: 16px;
   border: none;
@@ -74,10 +76,16 @@
   min-height: 80px;
 }
 
+.modal.edit-task-modal .modal-footer {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 10px;
+}
+
 
 .modal.edit-task-modal button[type="submit"] {
   margin-top: 10px;
-  padding: 10px 15px;
+  padding: 0.75em 1.25rem;
   background-color: $main-orange;
   color: white;
   border: none;
