--- a/src/assets/styles/tasks-summary.scss
+++ b/src/assets/styles/tasks-summary.scss
@@ -43,7 +43,7 @@
   align-items: center;
   border-radius: 24px;
   padding: 1rem;
-  background-color: $main-orange;
+  background-color: $light-orange;
 }
 
 .tasks-summary-button-container > button {
