--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -5,13 +5,11 @@ $medium-gray: #e0e0e0;
 
 
 $dark-purple: #3A1B6A;
-$main-purple: #604CC3;
-$light-purple: #8E7CC3;
-$very-light-purple: #D8BFD8;
+$main-purple: #5E1B89;
+$light-purple: #9D71BC;
 
-$dark-orange: #CC5200;
-$main-orange: #e26d1f;
-$light-orange: #f19355;
-$very-light-orange: #FFE5B4;
+$dark-orange: rgb(235, 87, 29);
+$main-orange: #F4512C;
+$light-orange: #FF7F4D;
 
 $dark-gray: #757575;
